--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "enzyme": "^3.3.0",
     "jest": "^22.4.3",
     "react": "^16.3.2",
+    "react-test-renderer": "^16.4.1",
     "styled-components": "^3.2.6"
   }
 }
