--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "BABEL_ENV=production babel src -d lib",
-    "test": "jest"
+    "test": "jest src/"
+  },
+  "jest": {
+    "setupFiles": [
+      "./config/jest-config.js"
+    ],
+    "testRegex": "specs\\.js$"
   },
   "author": "",
   "license": "MIT",
   "peerDependencies": {
     "enzyme": "*",
     "styled-components": "*",
-    "react": "*"
+    "react": "*",
+    "react-test-renderer": "*"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -20,8 +27,11 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.4.3",
+    "jest-styled-components": "^5.0.1",
     "react": "^16.3.2",
+    "react-dom": "^16.4.1",
     "react-test-renderer": "^16.4.1",
     "styled-components": "^3.2.6"
   }
