--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "BABEL_ENV=production babel src -d lib",
+    "publishOnly": "npm run build", 
     "test": "jest src/"
   },
   "jest": {
